style.css
/* ... */
.fight .user-choice {
  position: relative;
  transform: scale(2);
  grid-area: user-choice;
}

.fight .house-choice {
  --size: 225px;
  block-size: var(--size);
  inline-size: var(--size);
  background-color: rgba(0, 0, 0, 0.1);
  border-radius: 50%;
  grid-area: house-choice;
}

.fight .house-choice.choice {
  position: relative;
  block-size: calc(var(--circle-size) + 3px);
  inline-size: var(--circle-size);
  transform: scale(2);
}

.fight p {
  font-size: 2.4rem;
  text-transform: uppercase;
  color: white;
  letter-spacing: 3px;
}

.fight p.you-picked {
  grid-area: you-picked;
}

.fight p.house-picked {
  grid-area: house-picked;
}

/* Showing fight result */

.fight.results {
  max-inline-size: 920px;
  margin-inline: auto;
  margin-block-start: 70px;
  display: grid;
  grid-template: 1fr 420px / 1fr 1fr 1fr;
  justify-items: center;
  align-items: center;
  grid-template-areas:
    'you-picked . house-picked'
    'user-choice result house-choice';
}

.result {
  display: flex;
  grid-area: result;
  min-block-size: 247px;
  flex-direction: column;
  justify-content: center;
}

#result-label {
  font-size: 5.6rem;
  font-weight: 700;
  letter-spacing: 0px;
  margin-block-end: 1.2rem;
}

.play-again {
  display: block;
  text-transform: uppercase;
  inline-size: 100%;
  padding: 1.2rem;
  color: var(--color-dark-text);
  border-radius: 8px;
  letter-spacing: 2.5px;
  animation: bounce 0.5s ease-in-out infinite alternate;
  animation-delay: 2s;
  --scale-bounce: 1.05;
}

.play-again:hover,
.play-again:focus-visible {
  box-shadow: 0 0 16px white;
  outline: none;
  animation-duration: 0.1s;
  --scale-bounce: 1.1;
}

@keyframes bounce {
  0% {
    transform: scale(1);
  }
  100% {
    transform: scale(var(--scale-bounce));
  }
}

.winner::after {
  --winner-radius: 108px;
  --button-width: calc(var(--circle-size) / 2);
  --shadow-full-width: calc(100% + 2 * var(--winner-radius));
  content: '';
  position: absolute;
  inset-inline-start: calc(50% - var(--shadow-full-width) / 2);
  inset-block-start: calc(50% - var(--shadow-full-width) / 2);
  block-size: var(--shadow-full-width);
  inline-size: var(--shadow-full-width);
  border-radius: 50%;
  pointer-events: none;
  background: radial-gradient(
    transparent var(--button-width),
    rgb(255 255 255 / 5%) var(--button-width),
    rgb(255 255 255 / 8%) 40%,
    rgb(255 255 255 / 3%) 40%,
    rgb(255 255 255 / 6%) 55%,
    rgb(255 255 255 / 2%) 55%
  );
}

/* Responsive */

@media screen and (max-width: 950px) {
  main {
    padding: 3rem 3rem 6rem;
  }

  header {
    border-radius: 6px;
    padding: 1rem 1.1rem;
  }

  header > img {
    max-block-size: 5rem;
    margin: 0.9rem 1rem;
  }

  .score-card {
    min-inline-size: 80px;
    border-radius: 4px;
    padding-block: 1rem;
    font-size: 1rem;
    line-height: 1;
  }

  #score {
    font-size: 4rem;
    line-height: 1.1;
  }

  .buttons-group {
    margin-block-start: 140px;
    max-inline-size: 200px;
    block-size: auto;
    aspect-ratio: 1;
    background-size: 100%;
    margin-block-end: 18.3rem;
  }

  button.scissors {
    inset-inline-start: 17%;
    inset-block-start: -33%;
  }

  button.spock {
    inset-inline-start: -37%;
    inset-block-start: 8%;
  }

  button.paper {
    inset-inline-end: -37%;
    inset-block-start: 9%;
  }

  button.lizard {
    inset-inline-start: -16%;
    inset-block-end: -39%;
  }

  button.rock {
    inset-inline-end: -16%;
    inset-block-end: -40%;
  }

  .choice {
    --circle-size: 135px;
    block-size: calc(var(--circle-size) + 3px);
    inline-size: var(--circle-size);
    --scale-buttons: 0.7;
    transform: scale(var(--scale-buttons));
  }

  .choice:hover,
  .choice:focus-visible {
    transform: scale(calc(var(--scale-buttons) + 0.1));
  }

  #rules-button {
    display: block;
    margin-inline: auto;
    position: static;
  }

  .fight {
    margin-block-start: 80px;
    grid-template: 170px 2.6rem / 1fr 1fr;
    grid-template-areas:
      'user-choice house-choice'
      'you-picked house-picked';
  }

  .fight .user-choice,
  .fight .house-choice.choice {
    --scale-buttons: 1;
    transform: scale(var(--scale-buttons));
  }

  .fight .house-choice {
    --size: 125px;
  }

  .fight p {
    font-size: 1.6rem;
    letter-spacing: 2px;
    text-align: center;
  }

  dialog.rules {
    inset: 0;
    transform: unset;
    border-radius: 0;
    max-width: none;
    max-height: none;
    block-size: 100%;
    inline-size: 100%;
    margin-block: 0;
    padding-inline: 3.2rem;
    padding-block: 0;
  }

  dialog.rules .container {
    justify-content: space-around;
    align-items: center;
    block-size: 100dvh;
    gap: unset;
  }

  dialog.rules h2 {
    text-align: center;
    position: static;
    margin-block-start: 4dvh;
  }

  dialog.rules button[type='submit'] {
    position: static;
  }

  .fight.results {
    max-inline-size: 100%;
    margin-block-start: 80px;
    grid-template: 170px 2.6rem 1fr / 1fr 1fr;
    justify-items: center;
    align-items: center;
    grid-template-areas:
      'user-choice house-choice'
      'you-picked house-picked'
      'result result';
  }

  #result-label {
    margin-block-end: 0.4rem;
    text-align: center;
  }

  .play-again {
    inline-size: 22rem;
  }
}

@media screen and (max-width: 360px) {
  .fight .user-choice,
  .fight .house-choice.choice {
    --scale-buttons: 0.8;
  }
}

.fadeIn {
  animation: fadeIn ease-in var(--animation-duration-fade-in-out) forwards;
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.fadeOut {
  animation: fadeOut ease-in var(--animation-duration-fade-in-out) forwards;
}

@keyframes fadeOut {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}
/* ... */

